Add basic currency rate getting
