# docs/swagger.json
@@ -11,7 +11,7 @@
     "paths": {
         "/rate": {
             "get": {
-                "description": "Request returns the current USD to UAH exchange rate using a third-party API",
+                "description": "Request returns the current USD to UAH exchange rate using Monobank API",
                 "produces": [
                     "application/json"
                 ],
@@ -24,6 +24,12 @@
                         "description": "Current USD to UAH exchange rate",
                         "schema": {
                             "type": "number"
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "type": "string"
                         }
                     }
                 }
